working verify email link

--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -203,7 +203,7 @@ template(name='checkin_card')
                             | complete check in
                             i.right.chevron.icon
                             //- i.right.chevron.icon
-                            .ui.big.button.complete_checkin
-                                +i name='key' classes='ui inline image'
-                                .ui.inline.header court key check out
+                            //- .ui.big.button.complete_checkin
+                            //-     +i name='key' classes='ui inline image'
+                                //- .ui.inline.header court key check out
                                 //- i.right.chevron.icon
