--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -6,15 +6,19 @@ template(name='rules_signing')
             .ui.small.header
                 +i name='reading-confirmation'
                 |valid email address for receipt
-            .ui.header #{resident.username}
-            .ui.fluid.input
-                input(type='email' value=resident.emails[0].address)
-            .ui.header I agree to the rules and regulations
-                if agree
-                    i.huge.checkmark.green.link.icon.agree
-                else
-                    i.huge.circle.outline.grey.icon.agree
-            if agree
+            .ui.header #{resident_doc.username}
+            +emails_edit    
+            //- .ui.fluid.action.input
+            //-     input.email_value(type='text' value=resident_email)
+            div
+            .ui.green.big.button.confirm_email confirm email
+            if email_confirmed
+                //- .ui.header I agree to the rules and regulations
+                //-     if agree
+                //-         i.huge.checkmark.green.link.icon.agree
+                //-     else
+                //-         i.huge.circle.outline.grey.link.icon.agree
+                //- if agree
                 .ui.small.header by signing below you agree to the rules and regulations and acknolwedge receipt via a valid email address
                 if signature_saved
                     +signature_view key='signature' direct=true
