image_edit for user lease and ownership paperwork, fix guest button view, add image fields for lease/ownership papers, fix email_verified, user admin and user emails receipts,

--- a/client/building.jade
+++ b/client/building.jade
@@ -39,9 +39,9 @@ template(name='unit_card')
         //- .ui.small.header building #{building_code}
         //- a.ui.large.button(href="/unit/#{_id}")
         //-     i.yellow.right.chevron.icon
-        //- each resident
-        //-     .ui.basic.label #{this}
-    if is_dev
-        +number_edit key='building_number' direct=true
-        +number_edit key='unit_number' direct=true
+        each resident
+            .ui.basic.label #{this}
+        if is_dev
+            +number_edit key='building_number' direct=true
+            +number_edit key='unit_number' direct=true
                     
