--- a/client/nav.jade
+++ b/client/nav.jade
@@ -85,12 +85,12 @@ template(name='nav')
                                 +i name='cashbook'
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
                                 +i name='chat'
-                            //- a.icon.item(href="/karma" class="{{isActivePath '/karma'}}" title='karma')
-                            //-     +i name='wallet'
-                            //-     |#{currentUser.karma}
-                            //- a.icon.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
-                            //-     +i name='shopping-cart'
-                            //-     |#{cart_amount}
+                            a.icon.item(href="/karma" class="{{isActivePath '/karma'}}" title='karma')
+                                +i name='wallet'
+                                |#{currentUser.karma}
+                            a.icon.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
+                                +i name='shopping-cart'
+                                |#{cart_amount}
                                 //- i.chat.large.icon
                             //- if is_user
                             //-     a.icon.item(href="/events" class="{{isActivePath '/events'}}")
