change checkin button so existing checked in people can check in twice, remove confirm email button so it just checks if there is an email, change signature save button to say 'save signature' to clarify, add back nav links to home and dash for logged in users, remove alerts for email editing

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -326,7 +326,7 @@ template(name='document_view')
     //-             |#{title}
     //-             i.dropdown.icon
     //-     .content 
-    if can_edit
+    if is_staff
         with referenced_document
             +edit_button
     |!{referenced_document.content}
@@ -814,7 +814,7 @@ template(name='signature_edit')
                 .fourteen.wide.column
                     .ui.huge.basic.fluid.button.save(title='Save')
                         i.checkmark.icon
-                        |save
+                        |save signature
                 .one.wide.column
                     .ui.large.icon.basic.button.clear(title='Clear')
                         i.remove.icon
