--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -10,9 +10,9 @@ template(name='rules_signing')
             +emails_edit    
             //- .ui.fluid.action.input
             //-     input.email_value(type='text' value=resident_email)
-            div
-            .ui.green.big.button.confirm_email confirm email
-            if email_confirmed
+            //- div
+            //- .ui.green.big.button.confirm_email confirm email
+            if resident_email
                 //- .ui.header I agree to the rules and regulations
                 //-     if agree
                 //-         i.huge.checkmark.green.link.icon.agree
