--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -299,7 +299,7 @@ template(name='email_validation_check')
     //-         i.checkmark.icon
     //-         |email validated
     unless email_verified
-        .ui.orange.basic.button.send_verification
+        .ui.orange.basic.large.fluid.button.send_verification
             //- i.ban.icon
             |email unvalidated
         if times
@@ -326,11 +326,11 @@ template(name='rules_and_regs_check')
             .ui.red.basic.button
                 i.signature.icon
                 | rules+regs unsigned, notify resident
-    else
-        unless rules_signed
-            .ui.large.red.basic.button.sign_rules
-                i.signature.icon
-                |click to sign rules and regulations
+    //- else
+    //-     unless rules_signed
+    //-         .ui.large.red.basic.button.sign_rules
+    //-             i.signature.icon
+    //-             |click to sign rules and regulations
         //- else if is_staff
         //-     .ui.large.basic.button
         //-         i.signature.icon
