full screen buttons on checkin, hide front from nonusers, remove login button from footer,

--- a/client/front.jade
+++ b/client/front.jade
@@ -140,11 +140,11 @@ template(name='healthclub_status')
         .ui.inline.header
             i.green.checkmark.icon
             |lower hot tub
-        .ui.grey.inline.header
-            |100.2°
+        //- .ui.grey.inline.header
+        //-     |100.2°
         div
         .ui.inline.header
             i.green.checkmark.icon
             |pool
-        .ui.grey.inline.header
-            |80.1°
+        //- .ui.grey.inline.header
+        //-     |80.1°
